[package]
name = "sid"
version = "0.1.0"
edition = "2024"
authors = ["Maxwell Odri <maxwellodri@gmail.com>"]
description = "A string ID library for efficient string comparison and lookups"
license = "MIT OR Apache-2.0"
#repository = "https://github.com/maxwellodri/sid"
readme = "README.md"
keywords = ["string", "id", "hash", "lookup", "game-dev"]
categories = ["data-structures", "game-development", "performance"]

[dependencies]
bevy = { version = "0.15", default-features = false, features = ["bevy_reflect"], optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
once_cell = "1.18"
flurry = "0.4"
ahash = "0.8"
lhash = "0.1"

[dependencies.macros]
path = "macros"
package = "sid-macros"



[lib]
crate-type = ["rlib"]

[features]
default = []
bevy = ["dep:bevy"]
test-utils = []

[workspace]
members = ["macros"]
