[package]
name = "sid"
version = "0.1.0"
edition = "2024"
authors = ["Maxwell Odri <maxwellodri@gmail.com>"]
description = "A string ID library for efficient string comparison and lookups"
license = "MIT OR Apache-2.0"
#repository = "https://github.com/maxwellodri/sid"
readme = "README.md"
keywords = ["string", "id", "hash", "lookup", "game-dev"]
categories = ["data-structures", "game-development", "performance"]

[dependencies]
bevy = { version = "0.16", default-features = false, optional = true }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
once_cell = "1"
flurry = { version = "0.5.0", features = ["serde", "rayon"] }
ahash = "0.8"
lhash = { version = "1", features = ["md5"] }
tracing-log = "0.2"

[dependencies.sid-macros]
version = "0.1.0"
path = "sid-macros"
package = "sid-macros"



[lib]
crate-type = ["rlib"]

[features]
default = []
bevy = ["dep:bevy"]
test-utils = []

[workspace]
members = ["sid-macros"]
