[package]
name = "sid-macros"
version = "0.1.0"
edition = "2024"
authors = ["Maxwell Odri <maxwellodri@gmail.com>"]
description = "Procedural macros for sid crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/sid"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit"] }

